--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -20,6 +20,11 @@
             </a>
         </li>
         <li>
+			<a href="/photos/upload">
+				アップロード
+			</a>
+		</li>
+        <li>
             <form th:action="@{/logout}" method="post">
                 <button type="submit">ログアウト</button>
             </form>
