--- a/src/main/resources/templates/photos/gallery.html
+++ b/src/main/resources/templates/photos/gallery.html
@@ -2,9 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <div th:fragment="main">
 	<h1>[[ ${title} ]]</h1>
-	<ul>
-		<li th:each="shotDate:${shotDates}">
-			<a th:href="@{/photos/{date} (date=${shotDate})}">[[ ${shotDate} ]] 撮影分</a>
+	<ul th:if="${!photos.isEmpty()}">
+		<li th:each="photo:${photos}">
+			<img th:src="@{/images/{image} (image=${photo.image})}">
 		</li>
 	</ul>
 </div>
